--- a/templates/home.gohtml
+++ b/templates/home.gohtml
@@ -2,7 +2,7 @@
 <div class="px-6">
 <h1 class="py-4 text-2xl semibold tracking-tight">A Kashmiri In America!</h1>
 <p class="italic"> 
-   In the life's of all people who came from Kashmir, the river Jehlum remains constant. <br>
+   In the lives of all people who came from Kashmir, the river Jehlum remains constant. <br>
    This beautiful poem below, I think, is my father's conversation with the river a few years back. <br>
    For all who have been displaced from their homes, I hope we all find our homes and our lands soon. <br>
    Our kids find in time, what their ancestor lost with time. <br>
