--- a/templates/tailwind.gohtml
+++ b/templates/tailwind.gohtml
@@ -11,7 +11,7 @@
         <nav class="px-8 py-6 flex items-center text-white">
             <div class="flex-grow">
                 <a class="text-lg font-semibold hover:text-blue-100 pr-8" href="/">Home</a>
-                <a class="text-lg font-semibold hover:text-blue-100 pr-8" href="/contact">Blogs</a>
+                <a class="text-lg font-semibold hover:text-blue-100 pr-8" href="/blogs">Blogs</a>
                 <a class="text-lg font-semibold hover:text-blue-100 pr-8" href="/citytemp">Weather</a>
             </div>
         </nav>
@@ -42,7 +42,7 @@
     </script>
     <footer class="bg-gradient-to-r from-blue-500 to-indigo-800">
         <nav class="px-8 py-6 flex items-center text-white">
-            <div class="text-l pr-12 font-serif text-center">Copyright A Might Thought Company, Yakima Washington USA, The Singh Project 2028</div>
+            <div class="text-l pr-12 font-serif text-center">Copyright A Mighty Thought Company, Yakima, Washington, USA. The Singh Project 2028</div>
         </nav>
     </footer>
 </body>
