--- a/templates/citytemp.gohtml
+++ b/templates/citytemp.gohtml
@@ -2,14 +2,14 @@
 <div class="py-12 flex justify-center ">
     <div class="px-8 py-8 bg-white bg-red-50 rounded shadow">
         <h1 class="pt-4 pb-8 text-center text-1xl font-bold text-gray-900"> 
-            Ask for the City weather here! 
+            What's the weather like in your city, well! lets find out! 
         </h1>
         <form action="/citytemp" method="post">
             <div class="hidden">
                 {{csrfField}}
             </div>
             <div>
-                <label for="city" class="text-sm font-semibold text-gray-900">Which City</label>
+                <label for="city" class="text-sm font-semibold text-gray-900">City</label>
                 <input name="city" id="city" type="city" placeholder="City name"
                 required autocomplete="city" class="w-full px-3 py-2 border border-grey-300 placeholder-gray-400
                 text-gray-800 rounded"/>
