--- a/templates/citytemp.gohtml
+++ b/templates/citytemp.gohtml
@@ -2,7 +2,7 @@
 <div class="py-12 flex justify-center ">
     <div class="px-8 py-8 bg-white bg-red-50 rounded shadow">
         <h1 class="pt-4 pb-8 text-center text-1xl font-bold text-gray-900"> 
-            What's the weather like in your city, well! lets find out! 
+            What's the weather like in your city? Well! lets find out! 
         </h1>
         <form action="/citytemp" method="post">
             <div class="hidden">
