--- a/templates/blog_list.gohtml
+++ b/templates/blog_list.gohtml
@@ -1,6 +1,6 @@
 {{template "header" .}}
 <div class="px-6">
 <h1 class="py-4 text-2xl semibold tracking-tight">Blog List.</h1>
-<p> Coming Soon...</p>
+<p> Coming Soon....</p>
 </div>
 {{template "footer" .}}
