--- a/templates/blog_list.gohtml
+++ b/templates/blog_list.gohtml
@@ -1,6 +1,6 @@
 {{template "header" .}}
-<div class="px-6">
-<h1 class="py-4 text-2xl semibold tracking-tight">Blog List.</h1>
-<p> Coming Soon....</p>
+<div>
+    <a class="px-5 text-lg italic hover:text-grey-100 pr-8" href="/one_step_at_a_time">One step at a time</a><br>
+    <a class="px-5 text-lg italic hover:text-grey-100 pr-8" href="/the_sun_rose_that_day">The sun rose that day</a>
 </div>
 {{template "footer" .}}
