--- a/templates/tailwind.gohtml
+++ b/templates/tailwind.gohtml
@@ -14,6 +14,9 @@
                 <a class="text-lg font-semibold hover:text-blue-100 pr-8" href="/blogs">Blogs</a>
                 <a class="text-lg font-semibold hover:text-blue-100 pr-8" href="/citytemp">Weather</a>
             </div>
+            <div class="space-x-4">
+                <a href="/contactus" class="px-4 py-2 bg-blue-700 hover:bg-blue-600 rounded">Contact Us</a>
+            </div>
         </nav>
     </header>
     <div class="py-4 px-2">
