--- a/templates/one_step_at_a_time.gohtml
+++ b/templates/one_step_at_a_time.gohtml
@@ -21,7 +21,7 @@
     we can still survive, and be happy only if we trust the "One step at a time" system. Let the world around you, do its thing. You cant control that. 
     But what we can control with some degree of certainity is our very next step. </p>
     <p class="italic text-l semibold">
-    So what are you waiting for, just take it. 
+    So what are you waiting for, JUST TAKE IT. 
     </p>
 </div>
 
