--- a/templates/thankspage.gohtml
+++ b/templates/thankspage.gohtml
@@ -1,6 +1,6 @@
 {{template "header" .}}
 <div class="px-6">
-<h1 class="py-4 text-2xl semibold tracking-tight">Thank you for your message.</h1>
+<h1 class="py-4 text-2xl semibold tracking-tight">Thanks for your message.</h1>
 <p> {{.Message}}</p>
 </div>
 {{template "footer" .}}
